Thêm các chức năng thanh toán, khuyến mãi, xem đơn hàng và thống kê doanh thu

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://public_server_ip_or_domain:3306/db_pet_paradise?createDatabaseIfNotExist=true 
+spring.datasource.url=jdbc:mysql://localhost:3306/db_pet_paradise?createDatabaseIfNotExist=true 
 spring.datasource.username=root
 spring.datasource.password=291968
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
